Fix spin slide readabillity for small screens

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -1531,6 +1531,7 @@ li.slide { width: 100% !important; }
   background-image: url(../images/banners/virt-manager.png);
   background-position: bottom right;
   background-repeat: no-repeat;
+  background-size: 35%;
 }
 
 /* Fedora spin slide */
